src/ui/features/execution/snapshots/terracotta__ui__features__execution__render__tests__preview_120x40_apply-failure.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---

 Terracotta | main

 ┌Apply result────────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │Apply failed                                                                                                        │
 │Changes may already be applied.                                                                                     │
 │Elapsed 4.0s                                                                                                        │
 │terraform apply review.tfplan                                                                                       │
 │terraform_data.api: Modifying... [id=api-20260920]                                                                  │
 │terraform_data.api: Modifications complete after 1s [id=api-20260920]                                               │
 │terraform_data.worker: Replacing... [id=worker-20260920]                                                            │
 │terraform_data.worker: Destruction complete after 1s                                                                │
 │terraform_data.worker: Creation complete after 1s [id=worker-20260920]                                              │
 │terraform_data.old: Destruction complete after 1s                                                                   │
 │terraform_data.new: Creation complete after 1s [id=new-20260920]                                                    │
 │A deliberately long synthetic apply line keeps horizontal scrolling visible in the production renderer              │
 │AccessDenied: synthetic provider rejected the request                                                               │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │                                                                                                                    │
 │────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 q/Ctrl-C quit | ↑/↓/PgUp/PgDn scroll | y yank result
