src/ui/features/execution/snapshots/terracotta__ui__features__execution__render__tests__preview_160x60_quit-confirmation.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---






 Terracotta | main

 ┌Apply result────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │Apply complete    Completed: 4/4    Elapsed: 4.0s                                                                                                           │
 │Failed: 0    Incomplete: 0    Skipped: 0    Previous: local success                                                                                         │
 │┌Targets *─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
 ││> All logs                                                                                                                                                ││
 ││  Resource  Status      Action       Elapsed  Previous                                                                                                    ││
 ││  terraform_data.api  Completed  update        1.0s    11.0s                                                                                              ││
 ││  terraform_data.worker  Completed  delete/create    1.0s       --                                                                                        ││
 ││  terraform_data.old  Completed  delete        1.0s       --                                                                                              ││
 ││  terraform_data.new  Completed  create        1.0s     4.0s                                                                                              ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 ││                                                                                                                                                          ││
 │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
 │┌Logs: All logs────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
 ││terraform_data.worker: Creation complete after 1s [id=worker-20260920]                                                                                   ▲││
 ││terraform_data.old: Destruction complete after 1s                                                                                                        │││
 ││terraform_data.new: Creation complete after 1s [id=new-20260920]                                                                                         │││
 ││A deliberately long synthetic apply line keeps horizontal scrolling visible in the production renderer                                                   │││
 ││terraform_data.api: Update started                                                                                                                       ┃││
 ││terraform_data.api: apply complete                                                                                                                       ┃││
 ││terraform_data.worker: Delete started                                                                                                                    ┃││
 ││terraform_data.worker: apply complete                                                                                                                    ┃││
 ││terraform_data.worker: Create started                                                                                                                    ┃││
 ││terraform_data.worker: apply complete                                                                                                                    ┃││
 ││terraform_data.old: Delete started                                                                                                                       ┃││
 ││terraform_data.old: apply complete                                                                                                                       ┃││
 ││terraform_data.new: Create started                                                                                                                       ┃││
 ││terraform_data.new: apply complete                                                                                                                       ┃││
 ││Warning: synthetic provider emitted a non-blocking diagnostic                                                                                            ┃││
 ││Apply finished successfully.                                                                                                                             ┃││
 ││Outputs: endpoint = synthetic                                                                                                                            ┃││
 ││Apply log remains in receive order.                                                                                                                      ▼││
 │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Quit Terracotta?   [Enter] Quit   [Esc] Cancel
