src/ui/features/execution/snapshots/terracotta__ui__features__execution__render__tests__preview_80x24_apply-failure.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---

 Terracotta | main

 ┌Apply result────────────────────────────────────────────────────────────────┐
 │Apply failed    Completed: 3/4    Elapsed: 4.0s                             │
 │Failed: 1    Incomplete: 0    Skipped: 0    Previous: local success         │
 │Changes may already be applied.                                             │
 │┌Targets *─────────────────────────────────────────────────────────────────┐│
 ││> All logs                                                                ││
 ││  Resource                  Status     Action     Elapsed  Previous       ││
 ││  terraform_data.api        Failed     update        1.0s    11.0s        ▲│
 ││  terraform_data.worker     Completed  delete/create    1.0s       --     ┃│
 ││  terraform_data.old        Completed  delete        1.0s       --        ▼│
 │└──────────────────────────────────────────────────────────────────────────┘│
 │┌Logs: All logs────────────────────────────────────────────────────────────┐│
 ││terraform_data.old: apply complete                                       ▲││
 ││terraform_data.new: Create started                                       │││
 ││terraform_data.new: apply complete                                       │││
 ││AccessDenied: synthetic provider rejected the request                    ┃││
 ││◀︎════════════════════════════════════════════════════────────────────────▶︎││
 │└──────────────────────────────────────────────────────────────────────────┘│
 └────────────────────────────────────────────────────────────────────────────┘
 q/Ctrl-C quit | ↑/↓ select | Tab focus | y yank result
