src/ui/features/execution/snapshots/terracotta__ui__features__execution__render__tests__preview_80x24_apply-success.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---

 Terracotta | main

 ┌Apply complete──────────────────────────────────────────────────────────────┐
 │Apply complete                                                              │
 │Resources: 2 added, 2 changed, 1 destroyed.                                 │
 │Elapsed 4.0s                                                                │
 │Warning: synthetic provider emitted a non-blocking diagnostic              ↑│
 │terraform_data.worker: Replacing... [id=worker-20260920]                   ││
 │terraform_data.worker: Destruction complete after 1s                       █│
 │terraform_data.worker: Creation complete after 1s [id=worker-20260920]     █│
 │terraform_data.old: Destruction complete after 1s                          █│
 │terraform_data.new: Creation complete after 1s [id=new-20260920]           █│
 │A deliberately long synthetic apply line keeps horizontal scrolling visible█│
 │Apply finished successfully.                                               ││
 │Outputs: endpoint = synthetic                                              ││
 │Apply log remains in receive order.                                        ││
 │                                                                           ││
 │Resources: 2 added, 2 changed, 1 destroyed.                                ││
 │←████████████████████████████████──────────────────────────────────────────→│
 │────────────────────────────────────────────────────────────────────────────│
 └────────────────────────────────────────────────────────────────────────────┘
 q/Ctrl-C quit | ↑/↓/PgUp/PgDn scroll | y yank result
