src/ui/features/execution/snapshots/terracotta__ui__features__execution__render__tests__preview_80x24_plan-progress.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---

 Terracotta | main

 ┌Planning────────────────────────────────────────────────────────────────────┐
 │| Planning...                                                               │
 │Waiting 2s    Follow: On                                                    │
 │Elapsed 2.0s                                                                │
 │planning output                                                             │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │                                                                            │
 │────────────────────────────────────────────────────────────────────────────│
 └────────────────────────────────────────────────────────────────────────────┘
 Ctrl-C cancel | End follow latest
