src/ui/features/execution/snapshots/terracotta__ui__features__execution__render__tests__preview_80x24_quit-confirmation.snap
---
source: src/ui/features/execution/render.rs
expression: buffer_text(buffer)
---

 Terracotta | main

 ┌Apply result────────────────────────────────────────────────────────────────┐
 │Resources: 2 added, 2 changed, 1 destroyed.                                 │
 │Elapsed 4.0s                                                                │
 │────────────────────────────────────────────────────────────────────────────│
 │terraform apply review.tfplan                                               │
 │terraform_data.api: Modifying... [id=api-20260920]                          │
 │terraform_data.api: Modifications complete after 1s [id=api-20260920]       │
 │terraform_data.worker: Replacing... [id=worker-20260920]                    │
 │terraform_data.worker: Destruction complete after 1s                        │
 │terraform_data.worker: Creation complete after 1s [id=worker-20260920]      │
 │terraform_data.old: Destruction complete after 1s                           │
 │terraform_data.new: Creation complete after 1s [id=new-20260920]            │
 │A deliberately long synthetic apply line keeps horizontal scrolling visible │
 │Warning: synthetic provider emitted a non-blocking diagnostic               │
 │Apply finished successfully.                                                │
 │Outputs: endpoint = synthetic                                               │
 │Apply log remains in receive order.                                         │
 │◀︎═══════════════════════════════════════════════════════───────────────────▶︎│
 └────────────────────────────────────────────────────────────────────────────┘
 Quit Terracotta? Enter quit | Esc cancel
